--- a/src/App.css
+++ b/src/App.css
@@ -38,12 +38,28 @@
 }
 
 main {
-  min-height: calc(70vh - 60px);
+  min-height: calc(100vh);
   margin-top: 15rem;
 }
 
+.card {
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  border: 2px solid #44475a;
+
+  -moz-user-select: none;
+  -website-user-select: none;
+  -o-user-select: none;
+}
+
+.card:hover {
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.5), 0 10px 10px rgba(0, 0, 0, 0.22);
+  transition: all 0.5s ease-out;
+  cursor: pointer;
+}
+
 footer {
-  position: absolute;
+  /* position: absolute; */
   bottom: 0;
   width: 100%;
   height: 2.5rem; /* Footer height */
