--- a/src/App.css
+++ b/src/App.css
@@ -54,8 +54,9 @@ main {
 
 .card:hover {
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.5), 0 10px 10px rgba(0, 0, 0, 0.22);
-  transition: all 0.5s ease-out;
+  transition: all 0.2s ease-out;
   cursor: pointer;
+  transform: scale(1.05);
 }
 
 footer {
